# fusion

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  LICENSE  Makefile  README.md  fusion  fusion.toml  fusion.toml.example  justfile  skills-lock.json  test_ddg.py  test_tools.py
.cargo/: config.toml
archive/: package-lock.json
crates/codegen/ptyctl/: Cargo.toml
crates/codegen/ptyctl-cli/: Cargo.toml
crates/codegen/ptyctl-cli/src/: cli.rs  main.rs  registry.rs
crates/codegen/ptyctl-cli/src/commands/: client.rs  mod.rs  run.rs
crates/codegen/ptyctl/src/: keys.rs  lib.rs  pty.rs  server.rs  session.rs  styled.rs  term.rs  wait.rs
crates/codegen/xai-acp-lib/: Cargo.toml
crates/codegen/xai-acp-lib/src/: channel.rs  common.rs  gateway.rs  lib.rs  line_reader.rs  message.rs  normalize.rs  stdin_reader.rs
crates/codegen/xai-codebase-graph/: Cargo.toml
crates/codegen/xai-codebase-graph/src/: index_manager.rs  interner.rs  lib.rs  navigation.rs
crates/codegen/xai-codebase-graph/src/languages/: golang.rs  javascript.rs  mod.rs  python.rs  rust.rs  ts.rs  types.rs
crates/codegen/xai-codebase-graph/src/manager/: builder.rs  cache.rs  lock.rs  mod.rs
crates/codegen/xai-codebase-graph/src/scope_graph/: edges.rs  graph.rs  mod.rs  nodes.rs
crates/codegen/xai-codebase-graph/src/types/: file_event.rs  location.rs  mod.rs  range.rs
crates/codegen/xai-codebase-graph/tests/: incremental_memory.rs  memory_integration.rs
crates/codegen/xai-fsnotify/: Cargo.toml
crates/codegen/xai-fsnotify/benches/: startup.rs
crates/codegen/xai-fsnotify/examples/: watch_stats.rs
crates/codegen/xai-fsnotify/src/: error.rs  event.rs  lib.rs  paths.rs  source.rs  state.rs  watcher.rs
crates/codegen/xai-fsnotify/tests/: integration.rs
crates/codegen/xai-gix-status/: Cargo.toml
crates/codegen/xai-gix-status/src/: lib.rs
crates/codegen/xai-grok-announcements/: .gitignore  Cargo.toml  generate.sh
crates/codegen/xai-grok-announcements/src/: lib.rs
crates/codegen/xai-grok-config-types/: Cargo.toml
crates/codegen/xai-grok-config-types/src/: flags.rs  lib.rs  mcp.rs  memory.rs  permission.rs  pool.rs
crates/codegen/xai-grok-env/: Cargo.toml
crates/codegen/xai-grok-env/src/: lib.rs
crates/codegen/xai-grok-hooks/: Cargo.toml
crates/codegen/xai-grok-hooks/examples/: README.md
crates/codegen/xai-grok-hooks/examples/hooks/: no-recursive-grep.json  safe-shell.json  session-log.json  tool-logger.json
crates/codegen/xai-grok-hooks/src/: config.rs  discovery.rs  dispatcher.rs  env_expand.rs  error.rs  event.rs  lib.rs  matcher.rs  result.rs  test_support.rs  trust.rs
crates/codegen/xai-grok-hooks/src/runner/: command.rs  http.rs  mod.rs
crates/codegen/xai-grok-hooks/tests/: integration.rs
crates/codegen/xai-grok-http/: Cargo.toml
crates/codegen/xai-grok-http/src/: lib.rs
crates/codegen/xai-grok-mermaid/: Cargo.toml
crates/codegen/xai-grok-mermaid/assets/: Roboto-LICENSE.txt
crates/codegen/xai-grok-mermaid/src/: engine.rs  lib.rs  mmdc.rs  pure.rs  raster.rs  subprocess.rs
crates/codegen/xai-grok-mermaid/tests/: pure_engine.rs
crates/codegen/xai-grok-models/: Cargo.toml  default_models.json
crates/codegen/xai-grok-models/src/: lib.rs
crates/codegen/xai-grok-paths/: Cargo.toml
crates/codegen/xai-grok-paths/src/: lib.rs
crates/codegen/xai-grok-plugin-marketplace/: Cargo.toml
crates/codegen/xai-grok-plugin-marketplace/src/: catalog.rs  config.rs  error.rs  git.rs  index.rs  install_resolve.rs  installer.rs  lib.rs  matcher.rs  scanner.rs  types.rs
crates/codegen/xai-grok-shared/: Cargo.toml
crates/codegen/xai-grok-shared/examples/: clipboard_probe.rs
crates/codegen/xai-grok-shared/src/: clipboard.rs  lib.rs  placeholder_images.rs  stderr.rs
crates/codegen/xai-grok-shared/src/session/: info.rs  mod.rs
crates/codegen/xai-grok-shell-base/: Cargo.toml
crates/codegen/xai-grok-shell-base/src/: cpu_profile.rs  env.rs  lib.rs
crates/codegen/xai-grok-shell-base/src/util/: changelog.rs  event_id.rs  grok_home.rs  mod.rs  secure_file.rs  tips.rs  uname.rs
crates/codegen/xai-grok-shell-session-support/: Cargo.toml
crates/codegen/xai-grok-shell-session-support/src/: lib.rs  managed_mcp.rs
crates/codegen/xai-grok-subagent-resolution/: Cargo.toml
crates/codegen/xai-grok-subagent-resolution/src/: config.rs  context.rs  lib.rs  overrides.rs  resume.rs  types.rs
crates/codegen/xai-grok-tools-api/: Cargo.toml  build.rs
crates/codegen/xai-grok-tools-api/proto/: grok-tools.proto
crates/codegen/xai-grok-tools-api/src/: lib.rs  slash_commands.rs
crates/codegen/xai-grok-tools-api/tests/: wire_shape.rs
crates/codegen/xai-grok-workspace-client/: Cargo.toml
crates/codegen/xai-grok-workspace-client/src/: lib.rs
crates/codegen/xai-hooks-plugins-types/: Cargo.toml
crates/codegen/xai-hooks-plugins-types/src/: lib.rs
crates/codegen/xai-hunk-tracker/: Cargo.toml
crates/codegen/xai-hunk-tracker/src/: commands.rs  diff.rs  events.rs  handle.rs  lib.rs  types.rs
crates/codegen/xai-hunk-tracker/src/actor/: actions.rs  git.rs  hunks.rs  mod.rs  mutations.rs  queries.rs  state.rs  tests.rs
crates/codegen/xai-hunk-tracker/src/loc/: mod.rs  tests.rs
crates/codegen/xai-mixpanel/: Cargo.toml
crates/codegen/xai-mixpanel/src/: lib.rs
crates/fusion-agent/: Cargo.toml
crates/fusion-agent/src/: agent.rs  lib.rs  persona.rs  swarm.rs
crates/fusion-agent/src/tools/: apply_patch.rs  browser_debug.rs  fetch_url.rs  get_symbols.rs  glob.rs  grep.rs  mod.rs  read_file.rs  search_replace.rs  search_web.rs  shell.rs  todo.rs  use_skill.rs  write_file.rs
crates/fusion-cli/: Cargo.toml
crates/fusion-cli/src/: main.rs
crates/fusion-core/: Cargo.toml
crates/fusion-core/src/: config.rs  design.rs  error.rs  lib.rs  models.rs  search_replace.rs  session.rs  task_session.rs  taste.rs
crates/fusion-llm/: Cargo.toml
crates/fusion-llm/src/: client.rs  cloudflare.rs  lib.rs  openai_compat.rs
crates/fusion-tui/: Cargo.toml
crates/fusion-tui/src/: ansi_markdown.rs  app.rs  clipboard.rs  event.rs  lib.rs  simple.rs  ui.rs
docs/: DETAILS.md  (+2 more)
(+2442 files in other folders)
