[package]
name = "fusion-agent"
description = "Agent loop and tool dispatch for Fusion"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fusion-core = { path = "../fusion-core" }
fusion-llm = { path = "../fusion-llm" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
urlencoding = "2"
