[package]
name = "fusion-core"
description = "Shared types, config loading, and search_replace safety for Fusion"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
dirs = "6"
toml = "0.8"
