[package]
name = "fusion-llm"
description = "Multi-provider LLM client for Fusion (Cloudflare Workers AI + OpenAI-compatible)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fusion-core = { path = "../fusion-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
async-openai = { version = "0.27", default-features = false, features = ["rustls"] }
tokio-stream = "0.1"
futures = "0.3"
reqwest-eventsource = "0.6"
