[package]
name = "fusion-tui"
description = "Ratatui terminal UI and simple REPL for Fusion"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fusion-core = { path = "../fusion-core" }
fusion-agent = { path = "../fusion-agent" }
fusion-llm = { path = "../fusion-llm" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
ratatui = "0.29"
crossterm = "0.28"
tui-textarea = "0.7"
