[package]
license = "Apache-2.0"
name = "ptyctl"
version = "0.1.0"
edition.workspace = true
description = "Headless PTY controller built on alacritty_terminal"
publish = false

[dependencies]
alacritty_terminal = { workspace = true }
portable-pty = { workspace = true }
terminput = { workspace = true }
tokio = { workspace = true, features = ["full"] }
axum = { workspace = true, features = ["ws"] }
futures-util = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
