[package]
license = "Apache-2.0"
name = "xai-acp-lib"
version = "0.1.0"
edition.workspace = true

[dependencies]
agent-client-protocol = { workspace = true, features = ["unstable"] }
async-trait = { workspace = true }
derive_more = { workspace = true }
futures = { workspace = true }
serde.workspace = true
tokio = { workspace = true }
tracing = { workspace = true }
serde_json.workspace = true

[lints]
workspace = true
