[package]
license = "Apache-2.0"
name = "xai-fsnotify"
version = "0.1.0"
edition.workspace = true
description = "Local-filesystem event source: single causal stream of semantic FsEvents"

[dependencies]
dunce = { workspace = true }
notify = "8"
notify-debouncer-full = "0.5"
ignore = { workspace = true }
globset = "0.4"
tokio = { workspace = true, features = ["sync", "time", "rt"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serial_test = "3"
criterion = { workspace = true }
xai-tracing-macros = { path = "../xai-tracing-macros" }

[[bench]]
name = "startup"
harness = false

[lints]
workspace = true
