[package]
license = "Apache-2.0"
name = "xai-grok-config-types"
version = "0.1.0"
edition.workspace = true
description = "Leaf configuration value types for the grok CLI, extracted from xai-grok-shell for dependency inversion."

[dependencies]
agent-client-protocol = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum = { workspace = true }
tracing = { workspace = true }
xai-grok-announcements = { workspace = true }
xai-grok-config = { workspace = true }
xai-grok-mcp = { workspace = true }

[features]
default-bazel = []

[lints]
workspace = true
