[package]
license = "Apache-2.0"
name = "xai-grok-models"
version = "0.1.0"
edition.workspace = true
description = "Default model IDs for the grok CLI, loaded from the embedded default_models.json."

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[lints]
workspace = true
