[package]
license = "Apache-2.0"
name = "xai-grok-plugin-marketplace"
version = "0.1.0"
edition.workspace = true

[dependencies]
dirs = { workspace = true }
dunce = { workspace = true }
fs2 = { workspace = true }
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
xai-tty-utils = { workspace = true }
xai-grok-agent = { workspace = true }
xai-grok-config = { workspace = true }
xai-hooks-plugins-types = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
