[package]
license = "Apache-2.0"
name = "xai-grok-tools-api"
version = "0.1.220-alpha.4"
edition.workspace = true
description = "Protobuf API definitions for Grok tools"

[dependencies]
tonic-prost = { workspace = true }
# Protobuf runtime
prost = { workspace = true }
tonic = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
xai-tool-protocol = { workspace = true }

[build-dependencies]
xai-proto-build = { workspace = true }

[package.metadata.cargo-shear]
ignored = ["serde", "tonic"]

[lints]
workspace = true
