[package]
license = "Apache-2.0"
edition.workspace = true
name = "xai-hooks-plugins-types"
version = "0.1.0"
description = "Shared DTO types for hooks/plugins ACP extensions (wire format only)"

[dependencies]
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
