[package]
license = "Apache-2.0"
name = "xai-hunk-tracker"
version = "0.1.0"
edition.workspace = true
description = "Track file hunks (diffs) with agent/external attribution"

[dependencies]
# External
chrono = { workspace = true, features = ["serde"] }
dunce = { workspace = true }
rustc-hash = { workspace = true }
gix = { workspace = true, features = ["status", "index", "parallel"] }
serde = { workspace = true, features = ["derive", "rc"] }
xai-gix-status = { workspace = true }
serde_json = { workspace = true }
similar = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
tempfile = { workspace = true }
xai-test-utils = { workspace = true }
