[package]
license = "Apache-2.0"
name = "xai-mixpanel"
version = "0.1.0"
edition.workspace = true
description = "Lightweight Mixpanel HTTP tracking client (replaces mixpanel-rs to avoid pulling reqwest 0.11)"

[dependencies]
reqwest = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
xai-grok-secrets = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
